    - Residents that are deleted by Towny will become hibernated residents.
    - Towny will remember their true registered date if the player ever rejoins the server.
    - Closes #5135.
0.97.0.20: 
  - Fix pagination footer for /t plotgrouplist and /t jail list.
  - Fix missing message feedback for `/ta nation [nation] set` commands.
    - Closes #5144. 
  - Prevent adding a townblock to a plot group if it doesn't match the groups' townblock type.
    - Closes #5141.
  - Bump language files to 0.117.
  - Fix /ta town NAME set spawn not working when the spawn isn't already set.
    - Closes #5150.
  - API: Add Town.getSpawnOrNull().
0.97.0.21:
  - Language files moved into resources/lang subfolder inside the jar.
  - Townyperms.yml now saves itself on load in order to build the comments on new installs.
  - Update onPlayerLogin task to not use methods which can throw NREs.
  - Rename language files to proper country-coded names.
    - Your existing language file will be renamed.
  - New Translations: 
    - Indonesian courtesy of pobab.
    - Dutch courtesy of Warrior & pesie.
0.97.0.22:
  - Fix renamed towns not following the capitalization rule.
  - New Translation:
    - Romanian courtesy of DevinMart.
  - Fix SQL saving residents trying to find a jail column and failing.
0.97.0.23:
  - Move permissions check down in onPlayerMove, courtesy of Warriorrrr with PR #5176.
  - Fix typos in the readme, courtesy of fredster33 with PR #5179. (First-Time Contributor!)
  - Added New town map-colour event, courtesy of Goosius with PR #5172.
  - API: New event added: TownMapColourLocalCalculationEvent ... for recalculation of the local town colour by plugins
  - API: Existing Event renamed: TownMapColourNationalCalculationEvent ... for recalculation of the national town colour by plugins
  - Fix list page footers missing a space in their click commands. 
0.97.0.24:
  - Fix banners not regenerating properly when exploded.
    - Closes #5178.